--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,17 +2,6 @@
   text-align: left;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #fef3df;
   min-height: 100vh;
@@ -28,26 +17,16 @@
 }
 
 .App-header-text {
-  font-size: 70px;
   color: #72cad8;
-  line-height: 75px;
   margin: 0px;
-  margin-bottom: 10px
+  margin-bottom: 10px;
 }
 
 .App-header-p {
   color: #72cad8;
   font-size: 24px;
   margin: 0px;
-  margin-bottom: 30px
-}
-
-.App-header-content {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 80px;
-  width: 40vw;
+  margin-bottom: 30px;
 }
 
 .primary-button {
@@ -56,7 +35,7 @@
   background-color: #277888;
   border-radius: 10px;
   color: #eafff3;
-  transition: background-color .05s linear;
+  transition: background-color 0.05s linear;
   cursor: pointer;
   font-family: "DMSans";
   text-decoration: none;
@@ -69,11 +48,11 @@
 .secondary-button {
   border: none;
   padding: 8px 18px 8px 18px;
-  background-color: rgba(0,0,0,0);
+  background-color: rgba(0, 0, 0, 0);
   border-radius: 10px;
   color: #277888;
-  transition: background-color .05s linear;
-  transition: border .05s linear;
+  transition: background-color 0.05s linear;
+  transition: border 0.05s linear;
   cursor: pointer;
   border: 2px solid #277888;
   font-family: "DMSans";
@@ -85,10 +64,110 @@
   border: 2px solid #eafff3;
 }
 
+.secondary-button-small {
+  border: none;
+  padding: 5px 15px 5px 15px;
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 10px;
+  color: #277888;
+  transition: background-color 0.05s linear;
+  transition: border 0.05s linear;
+  cursor: pointer;
+  border: 2px solid #277888;
+  font-family: "DMSans";
+  text-decoration: none;
+  font-size: 15px;
+}
+.secondary-button-small:hover {
+  background-color: #eafff3;
+  border: 2px solid #eafff3;
+}
+
 .highlighted-text {
   color: #277888;
 }
 
 .App-link {
-  color: #48b2cf;
+  color: #091f25;
+}
+
+.profile-button {
+  height: 60px;
+  width: 100%;
+  border: none;
+  font-family: "DMSans";
+  display: flex;
+  justify-content: space-between;
+  gap: 5px;
+  padding: 10px;
+  cursor: pointer;
+  background-color: #eafff3;
+  color: #277888;
+  transition: all 0.1s ease;
+}
+
+.profile-button:hover {
+  background-color: #d3fff9;
+}
+
+.settings-wheel {
+  transform: rotate(0deg);
+  transition: transform 0.2s ease;
+}
+
+.settings-wheel:hover {
+  transform: rotate(5deg);
+}
+
+.input-light {
+  width: 100%;
+  padding: 7px;
+  border: 2px solid #97d3df;
+  border-radius: 9px;
+  background-color: #eafff3;
+  color: #277888;
+  transition: border 0.2s ease;
+}
+
+.input-light:hover {
+  border: 2px solid #94eafc;
+  box-shadow: none;
+  outline: none;
+}
+
+.input-light:focus {
+  border: 2px solid #56dffa;
+  box-shadow: none;
+  outline: none;
+}
+
+.input-light::-webkit-input-placeholder {
+  /* WebKit browsers */
+  color: #277888;
+}
+.input-light:-moz-placeholder {
+  /* Mozilla Firefox 4 to 18 */
+  color: #277888;
+}
+.input-light::-moz-placeholder {
+  /* Mozilla Firefox 19+ */
+  color: #277888;
+}
+.input-light:-ms-input-placeholder {
+  /* Internet Explorer 10+ */
+  color: #277888;
+}
+
+@media only screen and (max-width: 899px) {
+  .App-header {
+    background-image: url("../public/waill-tall.png");
+  }
+  .primary-button {
+    padding: 7px 12px 7px 12px;
+    font-size: 15px;
+  }
+  .secondary-button {
+    padding: 5px 10px 5px 10px;
+    font-size: 15px;
+  }
 }
