--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,11 @@
   src: url("../public/DMSans_36pt-Regular.woff");
 }
 
+div,
+input {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: "DMSans";
@@ -11,6 +16,10 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+iframe#webpack-dev-server-client-overlay {
+  display: none !important;
 }
