--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -45,6 +45,22 @@
   background-color: #48b2cf;
 }
 
+.primary-button-small {
+  border: none;
+  padding: 7px 17px 7px 17px;
+  background-color: #277888;
+  border-radius: 10px;
+  color: #eafff3;
+  transition: background-color 0.05s linear;
+  cursor: pointer;
+  font-family: "DMSans";
+  text-decoration: none;
+  font-size: 15px;
+}
+.primary-button-small:hover {
+  background-color: #48b2cf;
+}
+
 .secondary-button {
   border: none;
   padding: 8px 18px 8px 18px;
